Fix message spacing

--- a/scss/themes/elite-dangerous/components/_chat-message.scss
+++ b/scss/themes/elite-dangerous/components/_chat-message.scss
@@ -1,6 +1,6 @@
 .chat-message {
-  margin-bottom: $default-gutter;
-  padding: $default-gutter;
+  margin-top: 1rem;
+  padding: 1rem $default-gutter;
 
   .user {}
 
